# bash_builder

./: Cargo.toml  README.md  test_config.toml
src/: main.rs
tests/: circular.sh  cli.rs  one.sh  source.sh  two.sh
tests/bash/: circular_1_utils.sh  circular_2_utils.sh  one_more_utils.sh  one_utils.sh  source_utils.sh  two_utils.sh
