[package]
name = "bash_bundler"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
description = "Collects/bundles bash files into one file."
repository = "https://github.com/thomas9911/bash_bundler"
license = "Unlicense"
keywords = ["shell", "bundler", "bash"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
